# message

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
deploy/: Makefile
deploy/lxc/: .env.prod  message.nginx  message.service  setup-container.sh
migrations/versions/: 0f45d2f7d0f8_initial_models.py  46d8b2f65eef_update_groups_and_teams.py  6b817a4bb027_add_photo_file_id_to_persons_and_.py  7b02b1ca5ad2_add_invitetoken_model.py  891a5c642654_add_family_model.py  a00b3b44c7e6_add_contact_fields_and_contacts_to_.py  b055cc69da86_add_meetinginstance_model_and_fk_on_.py  e75bd76e0094_add_structured_address_fields.py  f0eead19ffc0_initial_models.py
src/message/: __init__.py  authz.py  cli.py  config.py  email.py  errors.py  extensions.py  logging.py  middleware.py
src/message/models/: __init__.py  app_setting.py  auth_attempt.py  calendar_event.py  calendar_override.py  duty.py  duty_assignment.py  duty_group.py  duty_group_membership.py  event_type.py  family.py  family_relationship.py  file.py  flock.py  flock_member.py  group.py  group_member.py  idempotency_record.py  invite_token.py  meeting.py  meeting_instance.py  organization.py  person.py  (+10 more)
tests/: conftest.py  helpers.py  test_admin.py  test_assignments.py  test_auth.py  test_auto_assign.py  test_calendar.py  test_event_types.py  test_events.py  test_families.py  test_files.py  test_flocks.py  test_groups.py  test_idempotency.py  test_meetings.py  test_organization.py  test_persons.py  test_posts.py  test_relationships.py  test_roster.py  test_settings.py  test_teams.py  test_users.py
(+40 files in other folders)
